[package]
name = "erc721-substream"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = { path = "../substreams-ethereum/substreams-ethereum" }
#substreams-ethereum = { git = "https://github.com/MercuricChloride/substreams-ethereum.git" }
substreams-entity-change = "1.3"
prost = "0.11"
prost-types = "0.11"
base64 = "0.13.0"
ethabi = "18.0.0"
num-bigint = "0.4.4"
strum = { version = "0.25.0", features = ["derive"] }
nom = "7.1.3"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
substreams-helpers-macros = { path = "../substreams-helpers/graphql_enum" }
substreams-helpers-traits = { path = "../substreams-helpers/substreams-helpers-traits" }
derive_more = "0.99.17"

[build-dependencies]
anyhow = "1.0.72"
substreams-ethereum = { path = "../substreams-ethereum/substreams-ethereum" }
#substreams-ethereum = { git = "https://github.com/MercuricChloride/substreams-ethereum.git" }
prost-build = "0.11"
quote = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

[features]
polygon = []

default = []
